--- a/scss/_campaign.scss
+++ b/scss/_campaign.scss
@@ -1,5 +1,6 @@
 //Every row on the left starting from the turquoise
 .campaign {
+  overflow: hidden;
   @include contentContainer;
 }
 
